add all working controller fo tweets